[gd_scene load_steps=17 format=3 uid="uid://du6kybeyrcmf2"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_ieqr5"]
[ext_resource type="FontFile" uid="uid://d0skg0e6m85wm" path="res://ui/fonts/PixelMechaBold.ttf" id="2_4fgdc"]
[ext_resource type="FontFile" uid="uid://qf2y7hd0xsdv" path="res://ui/fonts/FutureKid.ttf" id="2_wmns7"]
[ext_resource type="PackedScene" uid="uid://kx061m0kpeni" path="res://utility/stopwatch.tscn" id="3_0adte"]
[ext_resource type="Texture2D" uid="uid://4kqx8nb2prvc" path="res://ui/icons/icon_katana.png" id="3_ke8ei"]
[ext_resource type="Texture2D" uid="uid://cfryo8f5bhj2x" path="res://assets/life_icon.png" id="4_3yceb"]
[ext_resource type="Texture2D" uid="uid://cq88huwfvxdts" path="res://ui/ammo_bar/ammo_background.png" id="4_8hcks"]
[ext_resource type="Texture2D" uid="uid://d343a4f4qhxft" path="res://ui/ammo_bar/ammo_overlay.png" id="5_0hs5n"]
[ext_resource type="Texture2D" uid="uid://yeiunbtbrgjq" path="res://ui/ammo_bar/ammo_fill.png" id="6_utr1n"]
[ext_resource type="Texture2D" uid="uid://b6whmq6ajt7fh" path="res://ui/ammo_bar/no_ammo.png" id="8_0161l"]
[ext_resource type="Texture2D" uid="uid://bgw8yelb73ub4" path="res://ui/icons/icon_bomb.png" id="10_1xgld"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qp07s"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Animation" id="Animation_cgqaq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BottomBar/AmmoCount/NoAmmo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomBar/AmmoCount/NoAmmo:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BossLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ax065"]
resource_name = "boss_warning"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.498039), Color(1, 1, 1, 1), Color(1, 1, 1, 0.537255), Color(1, 1, 1, 1), Color(1, 1, 1, 0.486275), Color(1, 1, 1, 1), Color(1, 1, 1, 0.45098), Color(1, 1, 1, 1), Color(1, 1, 1, 0.501961), Color(1, 1, 1, 1), Color(1, 1, 1, 0.454902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.584314), Color(1, 1, 1, 1), Color(1, 1, 1, 0.415686), Color(1, 1, 1, 1), Color(1, 1, 1, 0.368627), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BossLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_1fvu0"]
resource_name = "no_ammo"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BottomBar/AmmoCount/NoAmmo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomBar/AmmoCount/NoAmmo:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_32n0a"]
_data = {
"RESET": SubResource("Animation_cgqaq"),
"boss_warning": SubResource("Animation_ax065"),
"no_ammo": SubResource("Animation_1fvu0")
}

[node name="UI" type="Control" groups=["ui"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ieqr5")

[node name="TopBarLeft" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 105.0
offset_bottom = 28.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ScoreHeader" type="Label" parent="TopBarLeft"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.545098, 0.607843, 0.705882, 1)
theme_override_fonts/font = ExtResource("2_wmns7")
theme_override_font_sizes/font_size = 32
text = "SCORE"

[node name="ScoreLabel" type="Label" parent="TopBarLeft"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.545098, 0.607843, 0.705882, 1)
theme_override_fonts/font = ExtResource("2_wmns7")
theme_override_font_sizes/font_size = 32
text = "00000000"

[node name="Extend" type="TextureRect" parent="TopBarLeft"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("4_3yceb")
expand_mode = 1

[node name="TopBarRight" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -134.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 28.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
alignment = 2

[node name="MultiplierLabel" type="Label" parent="TopBarRight"]
visible = false
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.894118, 0.231373, 0.266667, 1)
theme_override_font_sizes/font_size = 32
text = "Multiplier
x1"
horizontal_alignment = 2

[node name="BossLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.5
offset_top = 119.0
offset_right = 64.5
offset_bottom = 160.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.996078, 0.905882, 0.380392, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = ExtResource("2_wmns7")
theme_override_font_sizes/font_size = 40
text = "WARNING!"
horizontal_alignment = 1

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -48.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
alignment = 1

[node name="SpecialWeaponIcon" type="TextureRect" parent="BottomBar"]
layout_mode = 2
texture = ExtResource("3_ke8ei")

[node name="AmmoCount" type="TextureProgressBar" parent="BottomBar"]
custom_minimum_size = Vector2(150, 27)
layout_mode = 2
size_flags_vertical = 4
texture_under = ExtResource("4_8hcks")
texture_over = ExtResource("5_0hs5n")
texture_progress = ExtResource("6_utr1n")

[node name="Label" type="Label" parent="BottomBar/AmmoCount"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 40.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_4fgdc")
text = "AMMO"
horizontal_alignment = 1

[node name="NoAmmo" type="TextureRect" parent="BottomBar/AmmoCount"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 150.0
offset_bottom = 27.0
texture = ExtResource("8_0161l")

[node name="LivesIcon" type="TextureRect" parent="BottomBar"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_3yceb")
expand_mode = 1

[node name="LivesCounter" type="Label" parent="BottomBar"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_4fgdc")
theme_override_font_sizes/font_size = 32
text = "x3"
vertical_alignment = 2

[node name="Bomb" type="TextureRect" parent="BottomBar"]
layout_mode = 2
texture = ExtResource("10_1xgld")

[node name="Panel" type="Panel" parent="BottomBar/Bomb"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qp07s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_32n0a")
}

[node name="Stopwatch" parent="." instance=ExtResource("3_0adte")]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -66.0
offset_top = 30.0
offset_right = 0.0
offset_bottom = 56.0
grow_horizontal = 0
